# camerahub-iommi

./: .gitignore  README.md  pyproject.toml
camerahub/: settings.py  urls.py
camerahub/camerahub/: settings.py
schema/: models.py
ui/: forms.py  pages.py  tables.py  urls.py
ui/templates/: iommi_base.html  nav.html
ui/templates/detail/: accessory_detail.html  archive_detail.html  battery_detail.html  bulkfilm_detail.html  camera_detail.html  cameramodel_detail.html  developer_detail.html  enlargermodel_detail.html  manufacturer_detail.html
