[tool.poetry]
name = "camerahub"
version = "0.1.0"
description = "CameraHub with Iommi UI"
authors = ["Jonathan Gazeley <me@jonathangazeley.com>"]
readme = "README.md"
packages = [{include = "camerahub"}]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.1"
iommi = "^6.4.0"
django-money = "^3.4.1"
django-currentuser = "^0.6.1"
django-autosequence = "^0.8.0"
awesome-slugify = "^1.6.5"
django-taggit = "^5.0.1"
django-versatileimagefield = "^3.0"
django-countries = "^7.5.1"
django-geoposition-2 = "^0.4.0"
django-colorfield = "^0.11.0"
django-choices = "^2.0.0"
numpy = "^1.26.3"
django-registration = "^3.4"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
